--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-    "name": "ft-engine",
-    "description": "Fil Toolkit's Engine",
-    "repository": "git@github.com:fil-studio/ft-engine.git",
-    "homepage": "https://github.com/fil-studio/ft-engine/",
-    "author": "fil studio <hello@fil.studio>",
-    "license": "Apache-2.0",
-    "private": true,
-    "workspaces": [
-      "packages/*"
-    ],
-    "dependencies": {
-      "three": "^0.150.0"
-    }
+  "name": "ft-engine",
+  "description": "Fil Toolkit's Engine",
+  "repository": "git@github.com:fil-studio/ft-engine.git",
+  "homepage": "https://github.com/fil-studio/ft-engine/",
+  "author": "fil studio <hello@fil.studio>",
+  "license": "Apache-2.0",
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "addons/*"
+  ],
+  "dependencies": {
+    "three": "^0.151.3"
   }
-  
+}
