Added Emissive to Unlit

--- a/packages/three/package.json
+++ b/packages/three/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ft-engine/three",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Fil Toolkit's parsers and utilities for standard scenes, material and texture libraries.",
   "module": "lib/main.js",
   "main": "lib/main.js",
@@ -23,6 +23,7 @@
     "three": "^0.151.3"
   },
   "devDependencies": {
+    "@types/three": "^0.152.1",
     "typescript": "^4.8.4"
   },
   "dependencies": {
